--- a/deepLearning/keras_tuner.ipynb
+++ b/deepLearning/keras_tuner.ipynb
@@ -157,10 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "b3728263",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-19 15:26:40.357875: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2022-08-19 15:26:40.397436: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-08-19 15:26:40.397453: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import keras_tuner\n",
@@ -171,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "61b95f9d",
    "metadata": {},
    "outputs": [],
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "7e441f8c",
    "metadata": {},
    "outputs": [
@@ -291,7 +301,7 @@
        "4  12.4  20.9  4.4  1017.3  61.0  1.3  8.7  22.2  200.645833"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "83e98edb",
    "metadata": {},
    "outputs": [],
@@ -324,14 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "8f47d55f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_model(hp):\n",
     "    model = keras.Sequential()\n",
-    "    for i in range(hp.Int('num_layers', 2, 20)):\n",
+    "    for i in range(2, 20):\n",
     "        model.add(layers.Dense(units=hp.Int('unit_' + str(i),\n",
     "                                           min_value = 32,\n",
     "                                           max_value = 512,\n",
@@ -343,16 +353,24 @@
     "                hp.Choice('learning_rate', [1e-2, 1e-3, 1e-4])),\n",
     "                  loss = 'mean_absolute_error',\n",
     "                    metrics=['mean_absolute_error'])\n",
-    "        return model\n",
-    "    "
+    "        return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "e55d74f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Reloading Oracle from existing project project/Air quality Index/oracle.json\n",
+      "INFO:tensorflow:Reloading Tuner from project/Air quality Index/tuner0.json\n"
+     ]
+    }
+   ],
    "source": [
     "tuner = keras_tuner.RandomSearch(\n",
     "           build_model,\n",
@@ -365,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "575e5b79",
    "metadata": {},
    "outputs": [
@@ -390,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "ee88d2a0",
    "metadata": {},
    "outputs": [],
@@ -401,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "id": "0214538a",
    "metadata": {},
    "outputs": [
@@ -421,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "4214144a",
    "metadata": {},
    "outputs": [
@@ -432,11 +450,23 @@
       "Results summary\n",
       "Results in project/Air quality Index\n",
       "Showing 10 best trials\n",
-      "<keras_tuner.engine.objective.Objective object at 0x7f1f78f44280>\n",
+      "<keras_tuner.engine.objective.Objective object at 0x7fd4640218b0>\n",
+      "Trial summary\n",
+      "Hyperparameters:\n",
+      "num_layers: 7\n",
+      "unit_0: 448\n",
+      "learning_rate: 0.0001\n",
+      "Score: nan\n",
       "Trial summary\n",
       "Hyperparameters:\n",
       "num_layers: 7\n",
       "unit_0: 64\n",
+      "learning_rate: 0.001\n",
+      "Score: nan\n",
+      "Trial summary\n",
+      "Hyperparameters:\n",
+      "num_layers: 14\n",
+      "unit_0: 352\n",
       "learning_rate: 0.001\n",
       "Score: nan\n",
       "Trial summary\n",
@@ -447,20 +477,8 @@
       "Score: nan\n",
       "Trial summary\n",
       "Hyperparameters:\n",
-      "num_layers: 14\n",
-      "unit_0: 352\n",
-      "learning_rate: 0.001\n",
-      "Score: nan\n",
-      "Trial summary\n",
-      "Hyperparameters:\n",
       "num_layers: 17\n",
       "unit_0: 416\n",
-      "learning_rate: 0.0001\n",
-      "Score: nan\n",
-      "Trial summary\n",
-      "Hyperparameters:\n",
-      "num_layers: 7\n",
-      "unit_0: 448\n",
       "learning_rate: 0.0001\n",
       "Score: nan\n"
      ]
@@ -474,6 +492,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f37b143f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9441b4b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e80dc744",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e2fd090",
    "metadata": {},
    "outputs": [],
    "source": []
